--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@types/node": "^16.18.11",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
-    "puppeteer": "^21.9.0"
+    "puppeteer": "^21.9.0",
+    "tailwindcss": "^3.4.10"
   },
   "license": "MIT"
 }
